src/objects/Batch_Result__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Prep__c</fullName>
        <label>Batch Prep</label>
        <referenceTo>Batch_Prep__c</referenceTo>
        <relationshipLabel>Batch Results</relationshipLabel>
        <relationshipName>Batch_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>If applicable, a text description pertaining to the Score can be defined</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emotions_Count__c</fullName>
        <inlineHelpText>The number of emotions used to calculate the score</inlineHelpText>
        <label>Emotions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minute_Number__c</fullName>
        <label>Minute Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <inlineHelpText>The score result from the Batch operation</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <inlineHelpText>The Date/Time being scored</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Result</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>